syntax = "proto3";

option csharp_namespace = "ProtoUserService";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package userproto;

service UserService {
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
    rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty);
}

// The number indicates the field's unique number
message ToDo {
    int32 id = 1;
    string task = 2;
    bool isCompleted = 3;
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  repeated ToDo toDos = 4;
}

message GetUserRequest {
    int32 id = 1;
}

message GetUserResponse {
    User user = 1;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
}

message CreateUserResponse {
    User user = 1;
    google.protobuf.Timestamp created_at = 2;
}

message ListUsersRequest {
    int32 offset = 1;
    int32 limit = 2;
}

message ListUsersResponse {
    int32 offset = 1;
    int32 amount = 2;
    repeated User users = 3;
}

message DeleteUserRequest {
    int32 id = 1;
}

